--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
-.page-wrap {
-  min-height: 100vh;
+.photo-app {
+  &__spinner {
+    width: 3rem;
+    height: 3rem;
+  }
+  &__page-wrap {
+    min-height: 100vh;
+  }
 }
